<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgColor"
    tools:context="gomes.john.johngomes_comp304lab4.activities.PatientActivity">

    <EditText
        android:id="@+id/editTextPatientId"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/patient_ID"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActivityTitle"
        app:layout_constraintHorizontal_bias="0.491" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_firstname"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPatientId"
        app:layout_constraintRight_toRightOf="@+id/editTextPatientId"
        app:layout_constraintTop_toBottomOf="@+id/editTextPatientId" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_lastname"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextFirstName"
        app:layout_constraintRight_toRightOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextDepartment"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_department"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextLastName"
        app:layout_constraintRight_toRightOf="@+id/editTextLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextDoctorId"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_doctorId"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDepartment"
        app:layout_constraintRight_toRightOf="@+id/editTextDepartment"
        app:layout_constraintTop_toBottomOf="@+id/editTextDepartment" />

    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_room"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDoctorId"
        app:layout_constraintRight_toRightOf="@+id/editTextDoctorId"
        app:layout_constraintTop_toBottomOf="@+id/editTextDoctorId" />

    <Button
        android:id="@+id/buttonAddPatient"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/patient_btnAdd"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/patient_details"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonViewPatients"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/patient_btnView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom" />
</android.support.constraint.ConstraintLayout>
